--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,10 @@
     height: 5rem;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid var(--color-background-dark);
+    /* -webkit-box-shadow: 3px 3px 19px -11px rgba(0,0,0,0.67);
+    -moz-box-shadow: 3px 3px 19px -11px rgba(0,0,0,0.67);
+    box-shadow: 3px 3px 19px -11px rgba(0,0,0,0.67); */
+    border-bottom: 1px solid var(--color-primary);
 }
 .HeaderContent{
     display: flex;
