--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -5,5 +5,13 @@
   flex-direction: column;
 }
 
+.ContentItem{
+  border-left: 1px solid var(--color-primary);
+  padding: 10px;
+}
 
-
+.ContentItem h1{
+  text-align: center;
+  margin-bottom: 40px;
+  margin: 0 0 40px 0;
+}
